--- a/css/index.css
+++ b/css/index.css
@@ -11,7 +11,7 @@ body {
     margin: 20px 0;
 }
 .icon-buttons {
-    display: flex;
+    display: column;
     justify-content: space-between;
     margin-bottom: 20px;
     margin-top: 20px;
