--- a/css/index.css
+++ b/css/index.css
@@ -6,18 +6,24 @@ body {
     color: #fff;
     padding: 10px;
     text-align: center;
+    height: 100%;
 }
 .app-section {
     margin: 20px 0;
 }
 .icon-buttons {
-    display: column;
-    justify-content: space-between;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     margin-bottom: 20px;
     margin-top: 20px;
 }
 .icon-buttons button {
-    width: 19%;
+    background-color: #F2F2F2;
+    color:#382D04;
+    font-weight: bold;
+    margin-top: 15px;
+    width:50%;
 }
 .app-section p {
     margin-bottom: 1rem;
@@ -25,4 +31,8 @@ body {
 .login-form {
     max-width: 300px;
     margin: 0 auto;
+}
+.search-bar{
+    margin: auto;
+    width: 60%;
 }
